# Incarnate

./: CMakeLists.txt  toughts.txt
Incarnate/: CMakeLists.txt
Incarnate/Incarnate/: Accelerator.cpp  Accelerator.hpp  Camera.hpp  FrameBuffer.hpp  Incarnate.hpp  Mesh.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Texture.cpp  Texture.hpp
Incarnate/Incarnate/Core/: Buffer.hpp  ComputeAPI.hpp  Error.hpp  Math.hpp
incViewer/: CMakeLists.txt  GLSLSource.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  incLuaAPI.hpp  incViewer.cpp
incViewer/imgui/: imconfig.h
scenes/: simple.lua
